--- a/ls/project.json
+++ b/ls/project.json
@@ -5,15 +5,16 @@
   },
 
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.0"
-    }
+    "NETStandard.Library": "1.5.0-rc2-24027"
   },
 
   "frameworks": {
+    "net451": {},
     "netcoreapp1.0": {
       "imports": "dnxcore50"
     }
+  },
+  "runtimes": {
+    "win7-x64": {}
   }
 }
